# Sharp

./: .gitignore  CMakeLists.txt  GETTING_STARTED.md  JIT.s  README.md  build.sh  linux-dbg-compile-script.bash  linux-x64-compile-script.bash  main.cpp  mapping.txt  out.odf  out2  stack_dump.txt  stdimports.h
.github/workflows/: publish_release.yml
PCBuild/: Sharp.sln  Sharp.vcxproj  Sharp.vcxproj.filters
PCBuild/Debug/Sharp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Sharp.lastbuildstate
benchmark/: PerformanceTest1.sharp  PerformanceTest10.sharp  PerformanceTest11.sharp  PerformanceTest12.sharp  PerformanceTest13.sharp  PerformanceTest14.sharp  PerformanceTest2.sharp  PerformanceTest3.sharp  PerformanceTest4.sharp  PerformanceTest5.sharp  PerformanceTest6.sharp  PerformanceTest7.sharp  PerformanceTest8.sharp  PerformanceTest9.sharp
benchmark/forceField/: Main.sharp  Particle.sharp  Vector.sharp
build-scripts/: linux-dbg-compile-script.bash  linux-install.bash  linux-x64-compile-script.bash
compiler-test/: settings.json
compiler-test/generated-old/: native_mapping.cpp  native_mapping.h  snb_api.cpp  snb_api.h
compiler-test/src/: account_manager.sharp  bank_account.sharp  di.sharp  main.sharp  transaction.sharp  user.sharp  user_manager.sharp  user_terminal.sharp
compiler-test/src/settings/: platforms.sharp  settings.sharp  settings_processor.sharp
deployment/: deploy  deploy.odf  deploy.sharp  mapping.txt  test  test.odf
doc/: CHANGELIST.md  ROADMAP.md  compiler_options.txt  grammars.txt
examples/: HelloWorld.sharp  Variables.sharp  atomic.sharp  console_command.sharp  console_input.sharp  example1.sharp  example2.sharp  example3.sharp  factorial.sharp  file_copy.sharp  function_timer.sharp  grammarhierarchy.txt  grammars.txt  helloworld.sharp  list.sharp  task.sharp  thread.sharp  xor_neural_net.sharp
examples/C++ Hello World/: hello.cpp  helloworld.sharp
lib/Modules/math/: cmath.cpp  cmath.h
lib/Modules/std/: Random.cpp  Random.h  (+2 more)
lib/Modules/std.io/: fileio.cpp  fileio.h  memory.cpp  memory.h  serialization.cpp  serialization.h
lib/Modules/std.kernel/: clist.cpp  clist.h  cmath.cpp
lib/binaries/: README.md
lib/bootsrtap/: settings.json
lib/core/: access_flag.cpp  access_flag.h  architecture.h  data_type.h  exe_macros.h  function_type.h  thread_state.h  vm_interrupt_flag.h  vm_register.h
lib/gammar/: compiler_info.h  main.cpp  platform.h
lib/grammar/: AccessFlag.h  AccessModifier.h  Asm.cpp  Asm.h  Assembler.h  BytecodeStream.h  ClassObject.cpp  ClassObject.h  DataType.h  Environment.cpp  Environment.h  Exception.h  Field.cpp  Field.h  FieldType.h  GenericType.h  List.h  Method.cpp  Method.h  NativeField.h  Opcode.h  OperatorOverload.h  Optimizer.cpp  Optimizer.h  Param.cpp  Param.h  Runtime.cpp  Runtime.h  Runtime2.cpp  RuntimeNote.h  compiler_info.cpp  compiler_info.h  main.cpp  main.h  options.h  platform.h  runtime.cpp  runtime.h  sharp_file.cpp  sharp_file.h
lib/old_grammar/: AccessModifier.h  Asm.h  ClassObject.cpp  ClassObject.h  Exception.h  FieldType.h  GenericType.cpp  List.h  Method.cpp  OperatorOverload.h  Optimizer.h  Runtime.cpp  Runtime.h  Runtime2.cpp  main.cpp  main.h  options.h
lib/parser/: ast.cpp  ast.h  parseerrors.cpp  parseerrors.h  parser.cpp  parser.h
lib/runtime/: Environment.cpp  Environment.h  Exe.cpp  Exe.h  FastStack.h  InterruptFlag.h  Jit.cpp  Jit.h  JitAssembler.cpp  JitAssembler.h  Library.h  List.h  Manifest.cpp  Manifest.h  Meta.cpp  Meta.h  Mutex.cpp  Mutex.h  Opcode.cpp  Opcode.h  OpcodeInjection.h  SignalHandler.cpp  Thread.cpp  Thread.h  ThreadStates.h  VirtualMachine.cpp  VirtualMachine.h  _BaseAssembler.cpp  _BaseAssembler.h  console_helper.cpp  console_helper.h  fiber.cpp  fiber.h  init.cpp  init.h  jit.cpp  jit.cpp.old  jit.h  jit.h.old  linked_list.h  (+23 more)
lib/runtime_old/: Exe.cpp  Exe.h  Library.h  Opcode.h  Thread.cpp  Thread.h  ThreadStates.h  VirtualMachine.cpp  VirtualMachine.h  fiber.cpp  linked_list.h  profiler.cpp  register.h
lib/util/: File.cpp  File.h  HashMap.cpp  HashMap.h  KeyPair.h  List.h  List2.h  file.cpp  file.h  keypair.h  linked_list.h  list_helper.cpp  list_helper.h  mingw.mutex.h  time.cpp  time.h
projects/snake/: main.sharp
publish/Release-0.2.372/: CHANGELIST.md  GETTING_STARTED.md  Notepad++Sharp  Test.sharp  linux-install.bash
publish/Release-0.2.422/: CHANGELIST.md  GETTING_STARTED.md  Test.sharp  hello  linux-install.bash
publish/Release-0.2.581/: CHANGELIST.md  GETTING_STARTED.md  LanguageChanges.md  Notepad++Sharp.xml  hello  linux-install.bash
publish/Release-0.2.587/: CHANGELIST.md  linux-install.bash
release/: CHANGELIST.md  GETTING_STARTED.md  Notepad++Sharp  linux-install.bash  test.sharp
release/examples/: console_args.sharp  console_input.sharp  file_copy.sharp  function_timer.sharp  helloworld.sharp  new_class.sharp  random.sharp  string_to_int.sharp  task.sharp  thread.sharp  xor_neural_net.sharp
src/io/: io.sharp
src/lang/: boolean.sharp  double.sharp  float.sharp  int.sharp  list.sharp  long.sharp  string.sharp
src/srt/: srt_main.sharp
test/: helloworld.sharp  intarray.sharp  macro.sharp  operatoroverload.sharp  variable.sharp
test/syntax/: example1.sharp  example2.sharp  example3.sharp  example4.sharp  syntax.sharp
tests/: CompilerTest.sharp  CompilerTest10.sharp  CompilerTest11.sharp  CompilerTest2.sharp  CompilerTest3.sharp  CompilerTest4.sharp  CompilerTest5.sharp  CompilerTest6.sharp  CompilerTest7.sharp  CompilerTest8.sharp  CompilerTest9.sharp  Exception.sharp  GarbageCollectorperformance.sharp  Helloworld.sharp  IntArray.sharp  JITTest.sharp  Led.sharp  LoopOptimization.sharp  LoopPerformanceTest.sharp  PerformanceTest1.sharp  PerformanceTest2.sharp  PerformanceTest3.sharp  Reverse.sharp  SharpCompilerTest1.sharp  SimpleHelloWorld.sharp  Support.sharp  Testfile.sharp  ThreadTest.sharp  assembly.sharp  corouting_test.sharp  file.sharp  gpio.sharp  hashmap.sharp  helloworld.sharp  if_sandbox.sharp  memory.sharp  neural_net_test.sharp  print.asm  printc.asm  syntax.sharp  (+3 more)
tests/tmp/: tmp.txt
(+1165 files in other folders)
